added models for repos

--- a/application/templates/repos.html
+++ b/application/templates/repos.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1 class="mt-4">Services</h1>
+    <h1 class="mt-4">Repos</h1>
     <table class="table table-hover">
         <thead>
             <tr>
