--- a/application/templates/includes/sidebar.html
+++ b/application/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
         A & M team</div>
     <div class="list-group list-group-flush">
         <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('overview') }}">Overview</a>
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('services') }}">Services</a>
+        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('repos') }}">Repos</a>
         <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('open_pr') }}">Open PR</a>
     </div>
 </div>
