--- a/application/static/css/custom.css
+++ b/application/static/css/custom.css
@@ -2,6 +2,13 @@
     display: none;
   }
 
-  tr.hide-table-padding td {
-    padding: 0;
-    }
+tr.hide-table-padding td {
+  padding: 0;
+  }
+
+.name-highlight {
+  background-color: rgb(246, 235, 185);
+  font-weight: bold;
+
+}
+  
