added missing styles and improve release notes page

--- a/application/static/css/custom.css
+++ b/application/static/css/custom.css
@@ -7,7 +7,7 @@ tr.hide-table-padding td {
   }
 
 .name-highlight {
-  background-color: rgb(246, 235, 185);
+  background-color: #BDCDD6;
   font-weight: bold;
 
 }
