--- a/application/templates/release_notes.html
+++ b/application/templates/release_notes.html
@@ -15,16 +15,18 @@
                 Repo: <a href="{{ data.link }}" target="_blank">{{ data.link.split("/")[-1] }}</a>
             </li>
             <li>
-                Image: <a href="{{ additional_data.image_link }}" target="_blank">{{ additional_data.image_link.split("/")[-1].split("?")[0] }}</a>
+                Image: <a href="{{ additional_data.image_link }}" target="_blank">{{
+                    additional_data.image_link.split("/")[-1].split("?")[0] }}</a>
             </li>
             <li>
                 Docs: <a href="{{ additional_data.confluence_link }}" target="_blank">confluence A&M</a>
             </li>
             <li>
-                App-interface: <a href="{{ additional_data.app_interface_link }}" target="_blank">{{ "/".join(additional_data.app_interface_link.split("/")[-4:]) }}</a>
+                App-interface: <a href="{{ additional_data.app_interface_link }}" target="_blank">{{
+                    "/".join(additional_data.app_interface_link.split("/")[-4:]) }}</a>
             </li>
             <li>
-                Release docs: 
+                Release docs:
                 <a href="https://docs.engineering.redhat.com/x/XbDvFQ" target="_blank">dashboard</a>
                 {% if additional_data.release_process_docs %}
                 &bull;
@@ -45,7 +47,7 @@
             Last prod release:
             <a href="{{ data.release_production_mr_url }}">
                 MR#{{ data.release_production_mr_url.split("/")[-1] }}
-            </a> 
+            </a>
             merged on {{ data.date_release_production }} by {{ data.release_author }}<br>
 
             {% if data.commit_stage == data_commit_master %}
@@ -54,29 +56,32 @@
             <div>
                 Production commit: <code> {{ data.commit_production[:7] }} </code>
                 <span id="commit-sha-production" hidden>{{ data.commit_production}}</span>
-                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" onclick="copyToClipboard('commit-sha-production')">Copy</button>
+                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                    onclick="copyToClipboard('commit-sha-production')">Copy</button>
             </div>
             <div>
                 Stage commit: <code> {{ data.commit_stage[:7] }} </code>
                 <span id="commit-sha-stage" hidden>{{ data.commit_stage}}</span>
-                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" onclick="copyToClipboard('commit-sha-stage')">Copy</button>
+                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                    onclick="copyToClipboard('commit-sha-stage')">Copy</button>
             </div>
 
             {% if data.commit_stage == data_commit_master %}
             <div>
                 last commit on the {{ data.main_branch }} branch: {{ data.commit_master[:7] }}
                 <span id="commit-sha-master" hidden>{{ data.commit_master}}</span>
-                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" onclick="copyToClipboard('commit-sha-master')">Copy</button>
+                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                    onclick="copyToClipboard('commit-sha-master')">Copy</button>
             </div>
             {% endif %}
 
             Days without release: {{ data.days_without_release }} <br>
             PRs waiting for prod release: {{ data.list_of_pr|count }} <br>
-            All PRs with QE status "passed" or "N/A": 
+            All PRs with QE status "passed" or "N/A":
             {% if data.all_passed %}
-            <span style="color: darkgreen;">Yes</span> 
+            <span style="color: darkgreen;">Yes</span>
             {% else %}
-            <span style="color: crimson;">No</span> 
+            <span style="color: crimson;">No</span>
             {% endif %}
 
         </div>
@@ -106,13 +111,13 @@
 
                     <ul>
                         <li>
-                            QE status: 
+                            QE status:
                             {% if pr.qe_status %}
-                                {{ pr.qe_status }}
-                                {% if pr.qe_note %}
-                                    : {{ pr.qe_note}}
-                                {% endif %}
-                                ({{ pr.qe_author }})
+                            {{ pr.qe_status }}
+                            {% if pr.qe_note %}
+                            : {{ pr.qe_note}}
+                            {% endif %}
+                            ({{ pr.qe_author }})
                             {% endif %}
                         </li>
                     </ul>
@@ -123,7 +128,5 @@
         </div>
     </div>
 </div>
-
-
 
 {% endblock %}
