Update model for resource and add jenkins links

--- a/application/templates/services.html
+++ b/application/templates/services.html
@@ -23,6 +23,7 @@
                 <th scope="col">Prod</th>
                 <th scope="col">Days without release</th>
                 <th scope="col">PRs waiting for prod release</th>
+                <th scope="col">QE</th>
             </tr>
         </thead>
         <tbody>
@@ -72,6 +73,15 @@
                     {% else %}
                     {{ repo.list_of_pr|count }}
                     {% endif %}
+                </td>
+                <td>
+                    <a href="{{ repo.stage_build_link }}" target="_blank"> {% if repo.stage_build_status %}
+                    Passing{% else %}
+                    Failing{% endif %}&nbsp;Stage</a>
+<br />
+                       <a href="{{ repo.production_build_link }}" target="_blank"> {% if repo.production_build_status %}
+                    Passing{% else %}
+                    Failing{% endif %}&nbsp;Production</a>
                 </td>
             </tr>
             <tr class="hidden-info">
