formatting improvement on the services page

--- a/application/templates/services.html
+++ b/application/templates/services.html
@@ -82,7 +82,7 @@
                         {% else %}
                         Failing
                         {% endif %}
-                        &nbsp;Stage
+                        Stage
                     </a>
                     {% endif %}
                     <br />
@@ -90,7 +90,9 @@
                     <a href="{{ repo.production_build_link }}" target="_blank"> 
                         {% if repo.production_build_status%}
                         Passing{% else %}
-                        Failing{% endif %}&nbsp;Production</a>
+                        Failing{% endif %}
+                        Production
+                    </a>
                         {% endif %}
                 </td>
             </tr>
