formatting improvement on the services page

--- a/application/templates/services.html
+++ b/application/templates/services.html
@@ -81,8 +81,7 @@
                         Passing
                         {% else %}
                         Failing
-                        {% endif %}
-                        Stage
+                        {% endif %}&nbsp;Stage
                     </a>
                     {% endif %}
                     <br />
@@ -90,8 +89,7 @@
                     <a href="{{ repo.production_build_link }}" target="_blank"> 
                         {% if repo.production_build_status%}
                         Passing{% else %}
-                        Failing{% endif %}
-                        Production
+                        Failing{% endif %}&nbsp;Production
                     </a>
                         {% endif %}
                 </td>
